fix(authentication): adjusted background image which prevented scrolling on mobile breakpoints

--- a/client/src/pages/authentication/mobile/MAuthentication.scss
+++ b/client/src/pages/authentication/mobile/MAuthentication.scss
@@ -1,3 +1,24 @@
+.m-auth-container{
+  position: relative;
+  min-height: 100vh;
+}
+
+.m-auth-container::before {
+  content: "";
+  position: absolute;
+  top: 30%;
+  width: 100%;
+  z-index: -1;
+  height: 100%;
+  background-image: url("../../../assets/authentication/mobile/background.svg");
+  background-position: center;
+  background-size: cover;
+}
+
+.m-logo-row {
+  margin-bottom: 5rem;
+}
+
 .m-form-label{
   width: 90%;
 }
@@ -11,6 +32,7 @@
   min-width: 160%;
   z-index: -1;
 }
+
 
 @media (min-height: 800px) {
   .m-logo-row {
